i fixed the float aw yeah and i made the spacing between the image and text how i wanted it heck yes. now to the fucking grid i made at the top what the hell was i thinking

--- a/dw.css
+++ b/dw.css
@@ -48,8 +48,9 @@ ul li a:hover {
 	border: 3px solid black;
 }
 
-.about-img img {
+.img-rounded {
 	float: left;
+	margin-right: 10px;
 }
 
 /* ----sidebar---- */
